Runeatzeko arazoak konponduta, ondo hasten da aplikazioa