@@ -1,25 +1,44 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java project to get you started.
- * For more details take a look at the Java Quickstart chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.5/userguide/tutorial_java_projects.html
- */
+// Works with Gradle 5.7 and Java 12
 
+// To run this do:
+// ./gradlew run
+
+// To build a distribution zip:
+// ./gradlew distZip
 
 plugins {
-    // Apply the java plugin to add support for Java
     id 'java'
-
-    // Apply the application plugin to add support for building a CLI application.
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.7'
 }
 
-repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+
+sourceCompatibility = 11
+targetCompatibility = 11
+
+version = '0.0.1'
+group = 'ehu.isad'
+
+java {
+    modularity.inferModulePath.set(true)
 }
+
+application {
+    mainModule = 'javafx' // name defined in module-info.java
+    mainClass = 'ehu.isad.Main'
+}
+
+
+
+// ext.moduleName = 'gradlejavafxhelloworld'
+mainClassName = "$moduleName/ehu.isad.WhatWebFX"
+
+
+javafx {
+    version = "12"
+    modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls']
+}
+
 
 dependencies {
     // This dependency is used by the application.
@@ -28,14 +47,26 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
 
-    //mysql
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
+    //sqlite
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
 }
 
-application {
-    // Define the main class for the application.
-    mainClassName = 'WhatWebFX.WhatWebFX'
+repositories {
+    mavenCentral()
 }
 
+def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]
+
+run {
+    inputs.property('moduleName', moduleName)
+    doFirst {
+        jvmArgs = jvmArgs.plus(newArgs)
+        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
+                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
+                                '--module', "$mainClassName",
+        ])
+        classpath = files()
+    }
+}
 
 
